pod-fb.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-facebook-pod
spec:
  containers:
    - name: my-facebook-container
      image: nginx
