pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
  labels:
    app: my-app
spec:
  containers:
    - name: my-nginx-container
      image: nginx
