lb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer-service
spec:
  selector:
    app: my-app  
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 8080  
  type: LoadBalancer
