service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8080 # where user will send the request 
      targetPort: 80 # service will send the request to pod
      nodePort: 30000  # Specify a port in the NodePort range
