deployment-ingress.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-client
  namespace: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-nginx
          image: nginx
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 64m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: client
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: client
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: client
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # alb.ingress.kubernetes.io/actions.ssl-redirect: |
    #   {
    #     "Type": "redirect",
    #     "RedirectConfig": {
    #       "Protocol": "HTTPS",
    #       "Port": "443",
    #       "StatusCode": "HTTP_301"
    #     }
    #   }
spec:
  rules:
    - host: domain.name.com
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
